<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/reportTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacation_title2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reportHotelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_name2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/reportDateRangeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp" />
</LinearLayout>